@@ -485,7 +485,7 @@ browser.custom.context=
 plugin-manager.downloadSource=false
 plugin-manager.installUser=true
 plugin-manager.showAll=true
-plugin-manager.mirror.id=switch
+plugin-manager.mirror.id=NONE
 plugin-manager.deleteDownloads=true
 plugin-manager.hide-libraries.toggle=true
 plugin-blacklist.MacOS.jar=true
